--- a/example/ios/SpeechCommandExample/Info.plist
+++ b/example/ios/SpeechCommandExample/Info.plist
@@ -2,6 +2,9 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+ 	<key>NSMicrophoneUsageDescription</key>
+  	<string>Enable Microphone</string>
+
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
