--- a/example/package.json
+++ b/example/package.json
@@ -2,21 +2,27 @@
   "name": "SpeechCommandExample",
   "version": "0.0.1",
   "private": true,
+  "reactNativePermissionsIOS": [
+    "Microphone"
+  ],
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
-    "pods": "pod-install --quiet"
+    "pods": "pod-install --quiet",
+    "postinstall": "react-native setup-ios-permissions && pod-install"
   },
   "dependencies": {
     "react": "18.2.0",
-    "react-native": "0.71.5"
+    "react-native": "0.71.5",
+    "react-native-permissions": "^3.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
     "metro-react-native-babel-preset": "0.73.9",
-    "babel-plugin-module-resolver": "^4.1.0"
+    "babel-plugin-module-resolver": "^4.1.0",
+    "pod-install": "0.1.38"
   }
 }
